@@ -1,13 +1,12 @@
 package com.msi.admin.service;
 
+import com.alibaba.fastjson.JSON;
+import com.alibaba.fastjson.JSONArray;
+import com.alibaba.fastjson.JSONObject;
 import com.msi.admin.domain.Brand;
 import com.msi.admin.domain.PhoneModel;
 import com.msi.admin.domain.PhoneSeries;
 import com.msi.admin.domain.PhoneSpec;
-import com.msi.admin.dto.BrandDto;
-import com.msi.admin.dto.ModelDto;
-import com.msi.admin.dto.SeriesDto;
-import com.msi.admin.dto.SpecDto;
 import com.msi.admin.repository.BrandRepository;
 import com.msi.admin.repository.PhoneModelRepository;
 import com.msi.admin.repository.PhoneSeriesRepository;
@@ -17,12 +16,8 @@ import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
 
 import java.io.IOException;
-import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -43,24 +38,66 @@ public class DictService {
     this.specRepository = specRepository;
   }
 
+  public boolean updateSpecSort(Long modelId, List<PhoneSpec> specList) {
+    // Validate model
+    Optional<PhoneModel> modelOpt = modelRepository.findById(modelId);
+    if (!modelOpt.isPresent()) {
+      return false;
+    }
+    PhoneModel model = modelOpt.get();
+
+    // Get all valid specs for this model from DB
+    List<PhoneSpec> existingSpecs = specRepository.findByModelId(model.getId()).stream()
+        .filter(s -> s.getDeleted() == null || s.getDeleted() == 0)
+        .collect(Collectors.toList());
+
+    // Extract IDs from DB
+    java.util.Set<Long> existingIds = existingSpecs.stream()
+        .map(PhoneSpec::getId)
+        .collect(Collectors.toSet());
+
+    // Extract IDs from input
+    java.util.Set<Long> inputIds = specList.stream()
+        .map(PhoneSpec::getId)
+        .collect(Collectors.toSet());
+
+    // Check if they match exactly
+    if (!existingIds.equals(inputIds)) {
+      return false;
+    }
+
+    // Update sort order
+    java.util.Map<Long, PhoneSpec> specMap = existingSpecs.stream()
+        .collect(Collectors.toMap(PhoneSpec::getId, s -> s));
+
+    for (int i = 0; i < specList.size(); i++) {
+      Long id = specList.get(i).getId();
+      if (specMap.containsKey(id)) {
+        PhoneSpec spec = specMap.get(id);
+        spec.setSort(i + 1);
+        specRepository.save(spec);
+      }
+    }
+    return true;
+  }
+
   @Transactional
   public String importDict(MultipartFile file) {
     if (file.isEmpty()) {
       return "上传文件不能为空";
     }
     try {
-      ObjectMapper mapper = new ObjectMapper();
       byte[] bytes = file.getBytes();
-      List<BrandDto> brands = null;
+      String jsonContent;
       try {
-        brands = mapper.readValue(bytes, new TypeReference<List<BrandDto>>() {});
+        jsonContent = new String(bytes, java.nio.charset.StandardCharsets.UTF_8);
       } catch (Exception e) {
-        String contentFallback = new String(bytes, java.nio.charset.StandardCharsets.ISO_8859_1);
-        byte[] utf8Bytes = contentFallback.getBytes(java.nio.charset.StandardCharsets.UTF_8);
-        brands = mapper.readValue(utf8Bytes, new TypeReference<List<BrandDto>>() {});
+        jsonContent = new String(bytes, java.nio.charset.StandardCharsets.ISO_8859_1);
       }
+
+      JSONArray brandsArray = parseBrands(jsonContent);
       clearAllDict();
-      return processImport(brands);
+      return processImport(brandsArray);
     } catch (IOException e) {
       e.printStackTrace();
       return "文件读取失败: " + e.getMessage();
@@ -76,14 +113,32 @@ public class DictService {
       return "JSON内容不能为空";
     }
     try {
-      ObjectMapper mapper = new ObjectMapper();
-      List<BrandDto> brands = mapper.readValue(json, new TypeReference<List<BrandDto>>() {});
+      JSONArray brandsArray = parseBrands(json);
       clearAllDict();
-      return processImport(brands);
+      return processImport(brandsArray);
     } catch (Exception e) {
       e.printStackTrace();
       return "导入失败: " + e.getMessage();
     }
+  }
+
+  private JSONArray parseBrands(String jsonContent) {
+    Object parsed = JSON.parse(jsonContent);
+    if (parsed instanceof JSONObject) {
+      JSONObject root = (JSONObject) parsed;
+      if (root.containsKey("brands")) {
+        return root.getJSONArray("brands");
+      }
+      // If it's an object but doesn't have "brands", maybe try to cast it as a list?
+      // But based on user description, it's either array or object with brands.
+      // If the root object itself is not brands array, we might return empty or throw error.
+      // Let's assume if it's not containing brands, maybe the object itself is what we want (unlikely given previous code).
+      // But let's check if it can be cast to array if it was parsed as object (unlikely in fastjson unless structure is weird).
+      return new JSONArray(); 
+    } else if (parsed instanceof JSONArray) {
+      return (JSONArray) parsed;
+    }
+    return new JSONArray();
   }
 
   @Transactional
@@ -94,20 +149,40 @@ public class DictService {
     brandRepository.deleteAllInBatch();
   }
 
-  private String processImport(List<BrandDto> brands) {
+  private String processImport(JSONArray brands) {
+    Long currentBrandId = brandRepository.findMaxId();
+    currentBrandId = (currentBrandId == null) ? 0L : currentBrandId;
+    
+    Long currentSeriesId = seriesRepository.findMaxId();
+    currentSeriesId = (currentSeriesId == null) ? 0L : currentSeriesId;
+    
+    Long currentModelId = modelRepository.findMaxId();
+    currentModelId = (currentModelId == null) ? 0L : currentModelId;
+    
+    Long currentSpecId = specRepository.findMaxId();
+    currentSpecId = (currentSpecId == null) ? 0L : currentSpecId;
+
     int brandCount = 0;
     int seriesCount = 0;
     int modelCount = 0;
     int specCount = 0;
 
+    if (brands == null) {
+      return "导入数据为空";
+    }
+
     for (int i = 0; i < brands.size(); i++) {
-      BrandDto bDto = brands.get(i);
-      if (bDto.getBrand_name() == null || bDto.getBrand_name().isEmpty()) continue;
-      logger.info("正在导入品牌: {}", bDto.getBrand_name());
-      Brand brand = brandRepository.findByName(bDto.getBrand_name()).orElse(null);
+      JSONObject bObj = brands.getJSONObject(i);
+      String brandName = bObj.getString("title");
+      if (brandName == null || brandName.isEmpty()) continue;
+      
+      logger.info("正在导入品牌: {}", brandName);
+      Brand brand = brandRepository.findByName(brandName).orElse(null);
       if (brand == null) {
+        currentBrandId++;
         brand = new Brand();
-        brand.setName(bDto.getBrand_name());
+        brand.setId(currentBrandId);
+        brand.setName(brandName);
         brand.setSort(i + 1);
         brand.setDeleted(0);
         brand = brandRepository.save(brand);
@@ -118,16 +193,21 @@ public class DictService {
       }
       brandCount++;
 
-      if (bDto.getSeriesArr() != null) {
-        for (int j = 0; j < bDto.getSeriesArr().size(); j++) {
-          SeriesDto sDto = bDto.getSeriesArr().get(j);
-          if (sDto.getSeries_name() == null || sDto.getSeries_name().isEmpty()) continue;
-          logger.info("正在导入系列: {}", sDto.getSeries_name());
-          PhoneSeries series = seriesRepository.findByBrandAndSeriesName(brand, sDto.getSeries_name()).orElse(null);
+      JSONArray seriesArr = bObj.getJSONArray("series");
+      if (seriesArr != null) {
+        for (int j = 0; j < seriesArr.size(); j++) {
+          JSONObject sObj = seriesArr.getJSONObject(j);
+          String seriesName = sObj.getString("title");
+          if (seriesName == null || seriesName.isEmpty()) continue;
+          
+          logger.info("正在导入系列: {}", seriesName);
+          PhoneSeries series = seriesRepository.findByBrandIdAndSeriesName(brand.getId(), seriesName).orElse(null);
           if (series == null) {
+            currentSeriesId++;
             series = new PhoneSeries();
-            series.setBrand(brand);
-            series.setSeriesName(sDto.getSeries_name());
+            series.setId(currentSeriesId);
+            series.setBrandId(brand.getId());
+            series.setSeriesName(seriesName);
             series.setSort(j + 1);
             series.setDeleted(0);
             series = seriesRepository.save(series);
@@ -138,17 +218,22 @@ public class DictService {
           }
           seriesCount++;
 
-          if (sDto.getModelArr() != null) {
-            for (int k = 0; k < sDto.getModelArr().size(); k++) {
-              ModelDto mDto = sDto.getModelArr().get(k);
-              if (mDto.getModel_name() == null || mDto.getModel_name().isEmpty()) continue;
-              logger.info("正在导入型号: {}", mDto.getModel_name());
-              PhoneModel model = modelRepository.findBySeriesAndModelName(series, mDto.getModel_name()).orElse(null);
+          JSONArray modelArr = sObj.getJSONArray("models");
+          if (modelArr != null) {
+            for (int k = 0; k < modelArr.size(); k++) {
+              JSONObject mObj = modelArr.getJSONObject(k);
+              String modelName = mObj.getString("title");
+              if (modelName == null || modelName.isEmpty()) continue;
+              
+              logger.info("正在导入型号: {}", modelName);
+              PhoneModel model = modelRepository.findBySeriesIdAndModelName(series.getId(), modelName).orElse(null);
               if (model == null) {
+                currentModelId++;
                 model = new PhoneModel();
-                model.setBrand(brand);
-                model.setSeries(series);
-                model.setModelName(mDto.getModel_name());
+                model.setId(currentModelId);
+                model.setBrandId(brand.getId());
+                model.setSeriesId(series.getId());
+                model.setModelName(modelName);
                 model.setSort(k + 1);
                 model.setDeleted(0);
                 model = modelRepository.save(model);
@@ -159,18 +244,23 @@ public class DictService {
               }
               modelCount++;
 
-              if (mDto.getSpecArr() != null) {
-                for (int l = 0; l < mDto.getSpecArr().size(); l++) {
-                  SpecDto spDto = mDto.getSpecArr().get(l);
-                  if (spDto.getSpec_name() == null || spDto.getSpec_name().isEmpty()) continue;
-                  logger.info("正在导入配置: {}", spDto.getSpec_name());
-                  PhoneSpec spec = specRepository.findByModelAndSpecName(model, spDto.getSpec_name()).orElse(null);
+              JSONArray specArr = mObj.getJSONArray("variants");
+              if (specArr != null) {
+                for (int l = 0; l < specArr.size(); l++) {
+                  JSONObject spObj = specArr.getJSONObject(l);
+                  String specName = spObj.getString("title");
+                  if (specName == null || specName.isEmpty()) continue;
+                  
+                  logger.info("正在导入配置: {}", specName);
+                  PhoneSpec spec = specRepository.findByModelIdAndSpecName(model.getId(), specName).orElse(null);
                   if (spec == null) {
+                    currentSpecId++;
                     spec = new PhoneSpec();
-                    spec.setBrand(brand);
-                    spec.setSeries(series);
-                    spec.setModel(model);
-                    spec.setSpecName(spDto.getSpec_name());
+                    spec.setId(currentSpecId);
+                    spec.setBrandId(brand.getId());
+                    spec.setSeriesId(series.getId());
+                    spec.setModelId(model.getId());
+                    spec.setSpecName(specName);
                     spec.setSort(l + 1);
                     spec.setDeleted(0);
                     spec = specRepository.save(spec);
@@ -194,18 +284,16 @@ public class DictService {
   }
 
   public List<PhoneSeries> listSeriesByBrandId(Long brandId) {
-    Optional<Brand> brand = brandRepository.findById(brandId);
-    if (brand.isEmpty()) return List.of();
-    return seriesRepository.findByBrand(brand.get()).stream()
+    if (brandId == null) return List.of();
+    return seriesRepository.findByBrandId(brandId).stream()
         .filter(s -> s.getDeleted() == null || s.getDeleted() == 0)
         .sorted((a, b2) -> Integer.compare(a.getSort() == null ? 0 : a.getSort(), b2.getSort() == null ? 0 : b2.getSort()))
         .collect(Collectors.toList());
   }
 
   public List<PhoneModel> listModelsBySeriesId(Long seriesId) {
-    Optional<PhoneSeries> series = seriesRepository.findById(seriesId);
-    if (series.isEmpty()) return List.of();
-    return modelRepository.findBySeries(series.get()).stream()
+    if (seriesId == null) return List.of();
+    return modelRepository.findBySeriesId(seriesId).stream()
         .filter(m -> m.getDeleted() == null || m.getDeleted() == 0)
         .sorted((a,bm) -> Integer.compare(a.getSort() == null ? 0 : a.getSort(), bm.getSort() == null ? 0 : bm.getSort()))
         .collect(Collectors.toList());
@@ -279,73 +367,25 @@ public class DictService {
 
     for (int i = 0; i < brandList.size(); i++) {
       Long id = brandList.get(i).getId();
-      Brand brand = brandMap.get(id);
-      if (brand != null) {
-        brand.setSort(i);
+      if (brandMap.containsKey(id)) {
+        Brand brand = brandMap.get(id);
+        brand.setSort(i + 1);
         brandRepository.save(brand);
       }
     }
     return true;
   }
 
-  public PhoneSeries addSeries(Long brandId, String seriesName) {
-    Optional<Brand> brandOpt = brandRepository.findById(brandId);
-    if (brandOpt.isEmpty()) {
-      return null;
-    }
-    Brand brand = brandOpt.get();
-
-    Optional<PhoneSeries> existing = seriesRepository.findByBrandAndSeriesName(brand, seriesName);
-    if (existing.isPresent()) {
-      PhoneSeries series = existing.get();
-      if (series.getDeleted() != null && series.getDeleted() == 1) {
-        series.setDeleted(0);
-        Integer maxSort = seriesRepository.findMaxSortByBrandId(brandId);
-        series.setSort(maxSort == null ? 0 : maxSort + 1);
-        return seriesRepository.save(series);
-      }
-      return series;
-    }
-
-    PhoneSeries series = new PhoneSeries();
-    Long maxId = seriesRepository.findMaxId();
-    series.setId(maxId == null ? 1L : maxId + 1);
-    series.setBrand(brand);
-    series.setSeriesName(seriesName);
-    series.setDeleted(0);
-    Integer maxSort = seriesRepository.findMaxSortByBrandId(brandId);
-    series.setSort(maxSort == null ? 0 : maxSort + 1);
-    return seriesRepository.save(series);
-  }
-
-  public PhoneSeries updateSeries(Long id, String seriesName) {
-    Optional<PhoneSeries> optionalSeries = seriesRepository.findById(id);
-    if (optionalSeries.isPresent()) {
-      PhoneSeries series = optionalSeries.get();
-      series.setSeriesName(seriesName);
-      return seriesRepository.save(series);
-    }
-    return null;
-  }
-
-  public void deleteSeries(Long id) {
-    Optional<PhoneSeries> optionalSeries = seriesRepository.findById(id);
-    if (optionalSeries.isPresent()) {
-      PhoneSeries series = optionalSeries.get();
-      series.setDeleted(1);
-      seriesRepository.save(series);
-    }
-  }
-
   public boolean updateSeriesSort(Long brandId, List<PhoneSeries> seriesList) {
+    // Validate brand
     Optional<Brand> brandOpt = brandRepository.findById(brandId);
-    if (brandOpt.isEmpty()) {
+    if (!brandOpt.isPresent()) {
       return false;
     }
     Brand brand = brandOpt.get();
-    
+
     // Get all valid series for this brand from DB
-    List<PhoneSeries> existingSeries = seriesRepository.findByBrand(brand).stream()
+    List<PhoneSeries> existingSeries = seriesRepository.findByBrandId(brand.getId()).stream()
         .filter(s -> s.getDeleted() == null || s.getDeleted() == 0)
         .collect(Collectors.toList());
 
@@ -365,15 +405,14 @@ public class DictService {
     }
 
     // Update sort order
-    // Create a map for faster lookup
     java.util.Map<Long, PhoneSeries> seriesMap = existingSeries.stream()
         .collect(Collectors.toMap(PhoneSeries::getId, s -> s));
 
     for (int i = 0; i < seriesList.size(); i++) {
       Long id = seriesList.get(i).getId();
-      PhoneSeries series = seriesMap.get(id);
-      if (series != null) {
-        series.setSort(i);
+      if (seriesMap.containsKey(id)) {
+        PhoneSeries series = seriesMap.get(id);
+        series.setSort(i + 1);
         seriesRepository.save(series);
       }
     }
@@ -381,14 +420,15 @@ public class DictService {
   }
 
   public boolean updateModelSort(Long seriesId, List<PhoneModel> modelList) {
+    // Validate series
     Optional<PhoneSeries> seriesOpt = seriesRepository.findById(seriesId);
-    if (seriesOpt.isEmpty()) {
+    if (!seriesOpt.isPresent()) {
       return false;
     }
     PhoneSeries series = seriesOpt.get();
-    
+
     // Get all valid models for this series from DB
-    List<PhoneModel> existingModels = modelRepository.findBySeries(series).stream()
+    List<PhoneModel> existingModels = modelRepository.findBySeriesId(series.getId()).stream()
         .filter(m -> m.getDeleted() == null || m.getDeleted() == 0)
         .collect(Collectors.toList());
 
@@ -408,64 +448,97 @@ public class DictService {
     }
 
     // Update sort order
-    // Create a map for faster lookup
     java.util.Map<Long, PhoneModel> modelMap = existingModels.stream()
         .collect(Collectors.toMap(PhoneModel::getId, m -> m));
 
     for (int i = 0; i < modelList.size(); i++) {
       Long id = modelList.get(i).getId();
-      PhoneModel model = modelMap.get(id);
-      if (model != null) {
-        model.setSort(i);
+      if (modelMap.containsKey(id)) {
+        PhoneModel model = modelMap.get(id);
+        model.setSort(i + 1);
         modelRepository.save(model);
       }
     }
     return true;
   }
 
-  public PhoneModel addModel(Long brandId, Long seriesId, String modelName) {
-    Optional<PhoneSeries> seriesOpt = seriesRepository.findById(seriesId);
-    if (seriesOpt.isEmpty()) {
-      return null;
-    }
-    PhoneSeries series = seriesOpt.get();
-    
-    // Optionally verify brandId matches series.getBrand().getId()
-    if (brandId != null && !brandId.equals(series.getBrand().getId())) {
-      // Logic conflict: series does not belong to the provided brandId
-      // You might want to handle this, or just ignore brandId and trust seriesId
-      // For now, let's just proceed with the series found
-    }
-
-    Optional<PhoneModel> existing = modelRepository.findBySeriesAndModelName(series, modelName);
-    if (existing.isPresent()) {
-      PhoneModel model = existing.get();
-      if (model.getDeleted() != null && model.getDeleted() == 1) {
-        model.setDeleted(0);
-        Integer maxSort = modelRepository.findMaxSortBySeriesId(seriesId);
-        model.setSort(maxSort == null ? 0 : maxSort + 1);
-        return modelRepository.save(model);
+  public PhoneSeries addSeries(Long brandId, String name) {
+    Optional<Brand> brand = brandRepository.findById(brandId);
+    if (brand.isPresent()) {
+      PhoneSeries series = seriesRepository.findByBrandIdAndSeriesName(brandId, name).orElse(null);
+      if (series != null) {
+        if (series.getDeleted() != null && series.getDeleted() == 1) {
+          series.setDeleted(0);
+          Integer maxSort = seriesRepository.findMaxSortByBrandId(brandId);
+          series.setSort(maxSort == null ? 0 : maxSort + 1);
+          return seriesRepository.save(series);
+        }
+        return series;
       }
-      return model;
+      series = new PhoneSeries();
+      Long maxId = seriesRepository.findMaxId();
+      series.setId(maxId == null ? 1L : maxId + 1);
+      series.setBrandId(brandId);
+      series.setSeriesName(name);
+      series.setDeleted(0);
+      Integer maxSort = seriesRepository.findMaxSortByBrandId(brandId);
+      series.setSort(maxSort == null ? 0 : maxSort + 1);
+      return seriesRepository.save(series);
     }
-
-    PhoneModel model = new PhoneModel();
-    Long maxId = modelRepository.findMaxId();
-    model.setId(maxId == null ? 1L : maxId + 1);
-    model.setBrand(series.getBrand());
-    model.setSeries(series);
-    model.setModelName(modelName);
-    model.setDeleted(0);
-    Integer maxSort = modelRepository.findMaxSortBySeriesId(seriesId);
-    model.setSort(maxSort == null ? 0 : maxSort + 1);
-    return modelRepository.save(model);
+    return null;
   }
 
-  public PhoneModel updateModel(Long id, String modelName) {
+  public PhoneSeries updateSeries(Long id, String name) {
+    Optional<PhoneSeries> optionalSeries = seriesRepository.findById(id);
+    if (optionalSeries.isPresent()) {
+      PhoneSeries series = optionalSeries.get();
+      series.setSeriesName(name);
+      return seriesRepository.save(series);
+    }
+    return null;
+  }
+
+  public void deleteSeries(Long id) {
+    Optional<PhoneSeries> optionalSeries = seriesRepository.findById(id);
+    if (optionalSeries.isPresent()) {
+      PhoneSeries series = optionalSeries.get();
+      series.setDeleted(1);
+      seriesRepository.save(series);
+    }
+  }
+
+  public PhoneModel addModel(Long seriesId, String name) {
+    Optional<PhoneSeries> series = seriesRepository.findById(seriesId);
+    if (series.isPresent()) {
+      PhoneModel model = modelRepository.findBySeriesIdAndModelName(seriesId, name).orElse(null);
+      if (model != null) {
+        if (model.getDeleted() != null && model.getDeleted() == 1) {
+          model.setDeleted(0);
+          Integer maxSort = modelRepository.findMaxSortBySeriesId(seriesId);
+          model.setSort(maxSort == null ? 0 : maxSort + 1);
+          return modelRepository.save(model);
+        }
+        return model;
+      }
+      model = new PhoneModel();
+      Long maxId = modelRepository.findMaxId();
+      model.setId(maxId == null ? 1L : maxId + 1);
+      model.setBrandId(series.get().getBrandId());
+      model.setSeriesId(seriesId);
+      model.setModelName(name);
+      model.setDeleted(0);
+      Integer maxSort = modelRepository.findMaxSortBySeriesId(seriesId);
+      model.setSort(maxSort == null ? 0 : maxSort + 1);
+      return modelRepository.save(model);
+    }
+    return null;
+  }
+
+  public PhoneModel updateModel(Long id, String name) {
     Optional<PhoneModel> optionalModel = modelRepository.findById(id);
     if (optionalModel.isPresent()) {
       PhoneModel model = optionalModel.get();
-      model.setModelName(modelName);
+      model.setModelName(name);
       return modelRepository.save(model);
     }
     return null;
@@ -480,43 +553,39 @@ public class DictService {
     }
   }
 
-  public PhoneSpec addSpec(Long modelId, String specName) {
-    Optional<PhoneModel> modelOpt = modelRepository.findById(modelId);
-    if (modelOpt.isEmpty()) {
-      return null;
-    }
-    PhoneModel model = modelOpt.get();
-
-    Optional<PhoneSpec> existing = specRepository.findByModelAndSpecName(model, specName);
-    if (existing.isPresent()) {
-      PhoneSpec spec = existing.get();
-      if (spec.getDeleted() != null && spec.getDeleted() == 1) {
-        spec.setDeleted(0);
-        Integer maxSort = specRepository.findMaxSortByModelId(modelId);
-        spec.setSort(maxSort == null ? 0 : maxSort + 1);
-        return specRepository.save(spec);
+  public PhoneSpec addSpec(Long modelId, String name) {
+    Optional<PhoneModel> model = modelRepository.findById(modelId);
+    if (model.isPresent()) {
+      PhoneSpec spec = specRepository.findByModelIdAndSpecName(modelId, name).orElse(null);
+      if (spec != null) {
+        if (spec.getDeleted() != null && spec.getDeleted() == 1) {
+          spec.setDeleted(0);
+          Integer maxSort = specRepository.findMaxSortByModelId(modelId);
+          spec.setSort(maxSort == null ? 0 : maxSort + 1);
+          return specRepository.save(spec);
+        }
+        return spec;
       }
-      return spec;
+      spec = new PhoneSpec();
+      Long maxId = specRepository.findMaxId();
+      spec.setId(maxId == null ? 1L : maxId + 1);
+      spec.setBrandId(model.get().getBrandId());
+      spec.setSeriesId(model.get().getSeriesId());
+      spec.setModelId(modelId);
+      spec.setSpecName(name);
+      spec.setDeleted(0);
+      Integer maxSort = specRepository.findMaxSortByModelId(modelId);
+      spec.setSort(maxSort == null ? 0 : maxSort + 1);
+      return specRepository.save(spec);
     }
-
-    PhoneSpec spec = new PhoneSpec();
-    Long maxId = specRepository.findMaxId();
-    spec.setId(maxId == null ? 1L : maxId + 1);
-    spec.setBrand(model.getBrand());
-    spec.setSeries(model.getSeries());
-    spec.setModel(model);
-    spec.setSpecName(specName);
-    spec.setDeleted(0);
-    Integer maxSort = specRepository.findMaxSortByModelId(modelId);
-    spec.setSort(maxSort == null ? 0 : maxSort + 1);
-    return specRepository.save(spec);
+    return null;
   }
 
-  public PhoneSpec updateSpec(Long id, String specName) {
+  public PhoneSpec updateSpec(Long id, String name) {
     Optional<PhoneSpec> optionalSpec = specRepository.findById(id);
     if (optionalSpec.isPresent()) {
       PhoneSpec spec = optionalSpec.get();
-      spec.setSpecName(specName);
+      spec.setSpecName(name);
       return specRepository.save(spec);
     }
     return null;
@@ -531,57 +600,11 @@ public class DictService {
     }
   }
 
-  public boolean updateSpecSort(Long modelId, List<PhoneSpec> specList) {
-    Optional<PhoneModel> modelOpt = modelRepository.findById(modelId);
-    if (modelOpt.isEmpty()) {
-      return false;
-    }
-    PhoneModel model = modelOpt.get();
-    
-    // Get all valid specs for this model from DB
-    List<PhoneSpec> existingSpecs = specRepository.findByModel(model).stream()
-        .filter(s -> s.getDeleted() == null || s.getDeleted() == 0)
-        .collect(Collectors.toList());
-
-    // Extract IDs from DB
-    java.util.Set<Long> existingIds = existingSpecs.stream()
-        .map(PhoneSpec::getId)
-        .collect(Collectors.toSet());
-
-    // Extract IDs from input
-    java.util.Set<Long> inputIds = specList.stream()
-        .map(PhoneSpec::getId)
-        .collect(Collectors.toSet());
-
-    // Check if they match exactly
-    if (!existingIds.equals(inputIds)) {
-      return false;
-    }
-
-    // Update sort order
-    // Create a map for faster lookup
-    java.util.Map<Long, PhoneSpec> specMap = existingSpecs.stream()
-        .collect(Collectors.toMap(PhoneSpec::getId, s -> s));
-
-    for (int i = 0; i < specList.size(); i++) {
-      Long id = specList.get(i).getId();
-      PhoneSpec spec = specMap.get(id);
-      if (spec != null) {
-        spec.setSort(i);
-        specRepository.save(spec);
-      }
-    }
-    return true;
-  }
-
   public List<PhoneSpec> listSpecsByModelId(Long modelId) {
-    Optional<PhoneModel> modelOpt = modelRepository.findById(modelId);
-    if (modelOpt.isEmpty()) {
-      return Collections.emptyList();
-    }
-    return specRepository.findByModel(modelOpt.get()).stream()
+    if (modelId == null) return List.of();
+    return specRepository.findByModelId(modelId).stream()
         .filter(s -> s.getDeleted() == null || s.getDeleted() == 0)
-        .sorted(Comparator.comparing(PhoneSpec::getSort))
+        .sorted((a, b2) -> Integer.compare(a.getSort() == null ? 0 : a.getSort(), b2.getSort() == null ? 0 : b2.getSort()))
         .collect(Collectors.toList());
   }
 }
